@@ -132,6 +132,23 @@ mpd_run_playlist_delete(struct mpd_connection *connection,
 }
 
 bool
+mpd_send_playlist_delete_range(struct mpd_connection *connection, const char *name,
+			 unsigned start, unsigned end)
+{
+	return mpd_send_s_range_command(connection, "playlistdelete", name,
+					start, end);
+}
+
+bool
+mpd_run_playlist_delete_range(struct mpd_connection *connection,
+			const char *name, unsigned start, unsigned end)
+{
+	return mpd_run_check(connection) &&
+		mpd_send_playlist_delete_range(connection, name, start, end) &&
+		mpd_response_finish(connection);
+}
+
+bool
 mpd_send_save(struct mpd_connection *connection, const char *name)
 {
 	return mpd_send_command(connection, "save", name, NULL);
